fix: add link on mobile view - update responsive styles

--- a/assets/src/css/admin/summer-sales-banner.scss
+++ b/assets/src/css/admin/summer-sales-banner.scss
@@ -29,16 +29,16 @@
 .give-sale-banner-content {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 75%;
+    justify-content: flex-start;
+    gap: 3rem;
+    width: 70%;
 
     & * {
         font-size: inherit;
         font-family: Neurial Grotesk;
     }
 
-    & a {
-        display: inline-block;
+    a {
         color: inherit;
         font-weight: 700;
         text-decoration-thickness: 0.05em;
@@ -69,7 +69,7 @@
     }
 
     &__primary-cta {
-        flex: 1;
+        width: fit-content;
 
         > h1 {
             font-size: 1.5rem;
@@ -86,7 +86,8 @@
             line-height: normal;
         }
 
-        > a {
+
+        &-link {
             margin-top: 1.125rem;
             display: inline-flex;
             padding: 0.73125rem 1.6714375rem;
@@ -95,6 +96,14 @@
             background: #62B265;
             border-radius: 9999px;
             text-decoration: none;
+            margin-right: auto;
+        }
+
+        &-mobile-link {
+            display: none;
+            margin: 1rem 0 0 1rem;
+            color: #fff;
+            background: none;
         }
     }
 
@@ -164,27 +173,27 @@
     }
 }
 
-
-@media screen and (max-width: 1200px) {
-    .give-sale-banner-content {
-        gap: 1rem;
-        width: 60%;
-    }
-}
-
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
     .give-sale-banner-content {
         flex-direction: column;
         align-items: flex-start;
     }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 770px) {
+    .give-sale-banner {
+        padding-left: 1rem;
+    }
     .give-sale-banner-content__secondary-cta {
         display: none;
     }
+
+    .give-sale-banner-content__primary-cta-mobile-link {
+        display: inline-block;
+    }
+
     .give-sale-banner-action__abstract-icon {
-        max-width: 6.25rem;
-        max-height: 7.8125rem;
+        max-width: 8.25rem;
+        max-height: 9.5rem;
     }
 }
